src/styles/main.css
@import "./fonts.css";
@import "tailwindcss";

@theme {
  --font-primary: "Mulish", system-ui, sans-serif;
  --font-numerical: "Play", system-ui, sans-serif;

  --color-dusty-grape: #6e44c2;
  --color-alabaster-grey: #daddd8;
  --color-soft-linnen: #ecebe4;
  --color-platinum: #f9fffa;
  --color-black: #080705;
  --color-gold: #f0d066;
}

.markdown {
  ul {
    list-style-type: disc;
    padding-left: 1.5rem;
  }
}

.shadow-effect {
  overflow: visible;
  border-radius: 24px;
  position: relative;
  z-index: 0;
}

.shadow-effect-offset::after {
  top: -0.5rem !important;
}

.shadow-effect::after {
  content: "";
  height: 100%;
  width: calc(100% - 1rem);
  position: absolute;
  background-color: var(--color-dusty-grape);
  z-index: -1;
  top: 0;
  left: 0.5rem;
  border-radius: 1.5rem;
}

.backdrop-glass {
  background: rgba(0, 0, 0, 0.15);
  border-radius: 1.5rem;
  border-style: double;
  position: relative;
  z-index: 0;
  box-shadow:
    0 0 1px 1px rgba(0, 0, 0, 0.1) inset,
    0 0 5px 2px rgba(255, 255, 255, 0.5) inset;
}

.backdrop-glass-offset {
  backdrop-filter: blur(0.2rem) !important;
  -webkit-backdrop-filter: blur(0.2rem);
}

.backdrop-glass::before {
  content: "";
  background-image: url("../assets/images/noise.svg#grainy");
  background-repeat: repeat;
  filter: grayscale(100%);
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  opacity: 0.2;
  z-index: -1;
  border-radius: 1.5rem;
}

.button-glass {
  transition: backdrop-filter 0.2s ease-in-out;
  position: relative;
}

.button-glass:hover {
  backdrop-filter: blur(1.5rem) !important;
  -webkit-backdrop-filter: blur(1.5rem);
}

.button-shadow::after {
  transition:
    transform 0.2s ease-in-out,
    width 0.2s ease-in-out;
  background-color: var(--color-black);
  width: 100%;
  left: 0;
  pointer-events: none;
  /* background-color: var(--color-gold); */
}

.button-shadow:hover::after {
  width: calc(100% - 1rem);
  transform: translateY(-0.5rem) translateX(0.5rem);
}

